# mask-detector

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  packages.txt  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: architecture.md  deployment.md  performance.md
models/: download_model.py
scripts/: benchmark_fps.py  run_app.sh  webcam_preview.py
src/mask_detector/: __init__.py  app.py  config.py  detector.py  model_downloader.py  screenshot.py  video_stream.py
src/mask_detector/alerts/: __init__.py  alert_manager.py  voice_alert.py
src/mask_detector/utils/: __init__.py  cooldown.py  drawing.py  exceptions.py  fps.py  logger.py
tests/: test_alert_manager.py  test_cooldown.py  test_detector.py  test_model_downloader.py  test_screenshot.py  test_video_stream.py  test_voice_alert.py
