[project]
name = "mask-detector"
version = "0.1.0"
description = "Real-time AI face mask detection using YOLOv8, OpenCV, and Streamlit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Enables `pip install -e .` for a proper editable install (imports resolve
# without any sys.path manipulation). This is purely additive: scripts/ and
# models/download_model.py keep their own sys.path fallback so they still
# run standalone with zero setup, exactly as documented in their docstrings.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["mask_detector"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
